--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,28 @@
 name: Release
 on:
-  push:
-    tags:
-    - 'v*.*.*'
+  pull_request:
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@master
-    - name: Setup Go
-      uses: actions/setup-go@v1
+    - name: Set env
+      id: vars
+      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+    - name: Build JVM Docker Image
+      uses: docker/build-push-action@v1
       with:
-        go-version: 1.14
-    - name: GoReleaser
-      uses: goreleaser/goreleaser-action@v1
+        dockerfile: 'agent/Dockerfile'
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        repository: verizondigital/kubectl-flame
+        tags: ${{ steps.vars.outputs.tag }}-jvm
+    - name: Build JVM Alpine Docker Image
+      uses: docker/build-push-action@v1
       with:
-        version: latest
-        args: release --rm-dist
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Update new version in krew-index
-      uses: rajatjindal/krew-release-bot@v0.0.38
+        dockerfile: 'agent/Dockerfile.alpine'
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        repository: verizondigital/kubectl-flame
+        tags: ${{ steps.vars.outputs.tag }}-jvm-alpine
