--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,6 +17,8 @@ builds:
       - arm64
       - ppc64le
     goarm: [6, 7]
+    ldflags:
+      - -s -w -X version.semver={{.Tag}} -X version.date={{.Date}} -X version.commit={{.Commit}}
 archives:
   - id: kubectl-flame-archive
     name_template: |
