--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,8 +17,10 @@ builds:
       - arm64
       - ppc64le
     goarm: [6, 7]
-    ldflags:
-      - -s -w -X version.semver={{.Tag}} -X version.date={{.Date}} -X version.commit={{.Commit}}
+    ldflags: |
+      -X github.com/VerizonMedia/kubectl-flame/cli/cmd/version.semver={{ .Tag }}
+      -X github.com/VerizonMedia/kubectl-flame/cli/cmd/version.date={{ .Date }}
+      -X github.com/VerizonMedia/kubectl-flame/cli/cmd/version.commit={{ .Commit }}
 archives:
   - id: kubectl-flame-archive
     name_template: |
