--- a/agent/Dockerfile.alpine
+++ b/agent/Dockerfile.alpine
@@ -1,3 +1,9 @@
+FROM golang:1.14-buster as agentbuild
+WORKDIR /go/src/github.com/VerizonMedia/kubectl-flame
+ADD . /go/src/github.com/VerizonMedia/kubectl-flame
+RUN go get -d -v ./...
+RUN cd agent && go build -o /go/bin/agent
+
 FROM openjdk:8-alpine as asyncprofiler
 RUN apk add build-base git linux-headers
 RUN git clone https://github.com/edeNFed/async-profiler.git
@@ -5,8 +11,7 @@ RUN cd async-profiler && make
 
 FROM alpine
 RUN mkdir -p /app/async-profiler/build
-ADD agent /app
+COPY --from=agentbuild /go/bin/agent /app
 COPY --from=asyncprofiler /async-profiler/build /app/async-profiler/build
 COPY --from=asyncprofiler /async-profiler/profiler.sh /app/async-profiler
 CMD [ "/app/agent" ]
-
