--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,3 +1,9 @@
+FROM golang:1.14-buster as agentbuild
+WORKDIR /go/src/github.com/VerizonMedia/kubectl-flame
+ADD . /go/src/github.com/VerizonMedia/kubectl-flame
+RUN go get -d -v ./...
+RUN cd agent && go build -o /go/bin/agent
+
 FROM openjdk:8 as asyncprofiler
 RUN echo deb http://deb.debian.org/debian stretch-backports main > /etc/apt/sources.list.d/stretch-backports.list && \
     apt-get update && \
@@ -7,8 +13,7 @@ RUN cd async-profiler && make
 
 FROM bitnami/minideb:stretch
 RUN mkdir -p /app/async-profiler/build
-ADD agent /app
+COPY --from=agentbuild /go/bin/agent /app
 COPY --from=asyncprofiler /async-profiler/build /app/async-profiler/build
 COPY --from=asyncprofiler /async-profiler/profiler.sh /app/async-profiler
 CMD [ "/app/agent" ]
-
