--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
 name: Release
 on:
-  push:
-    tags:
-    - 'v*.*.*'
+  pull_request:
 jobs:
-  goreleaser:
+  testimages:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -19,7 +17,7 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USER }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         repository: verizondigital/kubectl-flame
-        tags: ${{ steps.vars.outputs.tag }}-jvm
+        tags: ${{ steps.vars.outputs.tag }}-jvm-test
     - name: Build JVM Alpine Docker Image
       uses: docker/build-push-action@v1
       with:
@@ -27,7 +25,7 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USER }}
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         repository: verizondigital/kubectl-flame
-        tags: ${{ steps.vars.outputs.tag }}-jvm-alpine
+        tags: ${{ steps.vars.outputs.tag }}-jvm-alpine-test
     - name: Build BPF Docker Image
       uses: docker/build-push-action@v1
       with:
@@ -36,16 +34,3 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         repository: verizondigital/kubectl-flame
         tags: ${{ steps.vars.outputs.tag }}-bpf
-    - name: Setup Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14
-    - name: GoReleaser
-      uses: goreleaser/goreleaser-action@v1
-      with:
-        version: latest
-        args: release --rm-dist
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Update new version in krew-index
-      uses: rajatjindal/krew-release-bot@v0.0.38
