--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,14 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         repository: verizondigital/kubectl-flame
         tags: ${{ steps.vars.outputs.tag }}-python
+    - name: Build Ruby Docker Image
+      uses: docker/build-push-action@v1
+      with:
+        dockerfile: 'agent/docker/ruby/Dockerfile'
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        repository: verizondigital/kubectl-flame
+        tags: ${{ steps.vars.outputs.tag }}-ruby
     - name: Setup Go
       uses: actions/setup-go@v1
       with:
