feat: adding the ability to launch profiling from the CLI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,14 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         repository: verizondigital/kubectl-flame
         tags: ${{ steps.vars.outputs.tag }}-ruby
+    - name: Build perf Docker Image
+      uses: docker/build-push-action@v1
+      with:
+        dockerfile: 'agent/docker/perf/Dockerfile'
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        repository: verizondigital/kubectl-flame
+        tags: ${{ steps.vars.outputs.tag }}-perf
     - name: Setup Go
       uses: actions/setup-go@v1
       with:
